--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
 <meta name="title" content="About Us">
 <meta name="DC.title" lang="en" content="About Us ">
 <meta name="description" content="">
-<meta name="keywords" content="Cricket Academy Dubai,Introductory to Professional Cricket Mentoring in the UAE,Secret Benefits of Signing up with in a Specialist Cricket Training Program,Abilities and Techniques Informed by Professional Trainers in the UAE,That Can Register with Professional Cricket Training in the UAE?,Facilities and Equipment at Leading Cricket Coaching Centers,Courses from Training to Competitive Cricket in the UAE,Routinely Asked Questions Regarding Specialist Cricket Training in the UAE">
+<meta name="keywords" content="Cricket Academy Dubai,Intro to Expert Cricket Educating in the UAE,Secret Advantages of Joining in a Professional Cricket Mentoring Program,Capacities and Techniques Taught by Specialist Trainers in the UAE,That Can Join Professional Cricket Mentoring in the UAE?,Facilities and Tools at Top Cricket Educating Centers,Paths from Mentoring to Affordable Cricket in the UAE,Frequently Asked Problems Concerning Expert Cricket Training in the UAE">
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -18,77 +18,77 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-.e47bf08e11fe23ad46dae19a707ba67cc{
-border: 1px solid #65829033;
-border-radius: 5px;
-padding: 20px 20px;
-background: #f9f7f3;
-}
-.navbar a{
-font-size: 17.7px!important;
-font-weight: bold;
-}
-.nav-item{
-padding-left:7.9px;
-padding-right:7.6px;
-padding-top:4.5px;
-padding-bottom:5.3px;
-}
 html{
 scroll-behavior: smooth;
-}
-.zf09dff20de7e8fefced31be8f2b1558b p,.zf09dff20de7e8fefced31be8f2b1558b span,.zf09dff20de7e8fefced31be8f2b1558b label{
-font-size:16px!important;
-}
-ul{
-list-style: circle;
-}
-.a1d4c72162e2df0285f54843bf31f71bc a,.zf09dff20de7e8fefced31be8f2b1558b a{
-color:#101010!important;
-text-decoration: underline !important;
-}
-footer *{
-font-size:16px !important;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-footer{
-background:#000000;
-color:#ffffff;
-}
-.btn-md{
-padding: 15.1px 30.2px;
-border-radius: 0;
-}
-.nav-link{
-color: #000000;
-
-}
-.zf09dff20de7e8fefced31be8f2b1558b a{
-font-size:16px;
 }
 a{
 text-decoration: none!important;
 }
-a:hover{
-color:#ffffff;background:#ffc658!important;
+.nav-item{
+padding-left:8.3px;
+padding-right:8px;
+padding-top:5.4px;
+padding-bottom:5px;
 }
-.z1004157b5632d97d6aef8e984347d1a9:hover{
-box-shadow: 0 50.5px 50.1px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.a1d4c72162e2df0285f54843bf31f71bc p,.a1d4c72162e2df0285f54843bf31f71bc a,.a1d4c72162e2df0285f54843bf31f71bc span,.a1d4c72162e2df0285f54843bf31f71bc label{
+.fab7587f3a3db710b3797a6ee7b9e164f p,.fab7587f3a3db710b3797a6ee7b9e164f a,.fab7587f3a3db710b3797a6ee7b9e164f span,.fab7587f3a3db710b3797a6ee7b9e164f label{
 font-size:16px!important;
 }
-.y1a3f4d4726f73932d120eee6a1fb9f10{
+footer{
+background:#060606;
+color:#ffffff;
+}
+.x41737f8caee9981ae8906cdc99ef68c8 a{
+font-size:16px;
+}
+.wcca7628cd8f144c2e347e6356aa83f60{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+.f32a522e48781bce682072ad6d1b2c1bc:hover{
+box-shadow: 0 50.4px 50px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.btn-md{
+padding: 14.6px 29.9px;
+border-radius: 0;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.fab7587f3a3db710b3797a6ee7b9e164f a,.x41737f8caee9981ae8906cdc99ef68c8 a{
+color:#0d0d0d!important;
+text-decoration: underline !important;
+}
+.dacdc6171c0c6201ed7db9b62f0cccdb2{
+border: 1px solid #627f8d30;
+border-radius: 5px;
+padding: 20px 20px;
+background: #efede9;
+}
+ul{
+list-style: circle;
+}
+footer *{
+font-size:16px !important;
+}
+a:hover{
+color:#ffffff;background:#ffc658!important;
+}
+.x41737f8caee9981ae8906cdc99ef68c8 p,.x41737f8caee9981ae8906cdc99ef68c8 span,.x41737f8caee9981ae8906cdc99ef68c8 label{
+font-size:16px!important;
+}
+.navbar a{
+font-size: 17.9px!important;
+font-weight: bold;
+}
+.nav-link{
+color: #000000;
+
 }
 </style>
 <script type="application/ld+json">{
@@ -829,28 +829,28 @@ This page provides information on an international badminton tournament held in 
 </script></head>
 <body>
      
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/spsa.png" src="img/spsa.png"  width="150px" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav d-flex ml-auto align-items-center"><li class="nav-item">
-<a class="b2a4f3550c8da111bc39bd86c805aa645 nav-link" href="index.html" >Cricket Academy Dubai</a>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="navbar-nav d-flex align-items-center ml-auto"><li class="nav-item">
+<a class="w73c243886762442f3b55c204ca2a9498 nav-link" href="index.html" >Cricket Academy Dubai</a>
 </li>
 <li class="nav-item">
-<a class="nav-link b2a4f3550c8da111bc39bd86c805aa645" href="professional-cricket.html" >professional cricket</a>
+<a class="w73c243886762442f3b55c204ca2a9498 nav-link" href="professional-cricket.html" >professional cricket</a>
 </li>
 <li class="nav-item">
-<a class="b2a4f3550c8da111bc39bd86c805aa645 nav-link" href="cricket-coaching.html" >cricket coaching</a>
+<a class="nav-link w73c243886762442f3b55c204ca2a9498" href="cricket-coaching.html" >cricket coaching</a>
 </li>
 <li class="nav-item">
-<a class="b2a4f3550c8da111bc39bd86c805aa645 nav-link" href="uae-cricket.html" >UAE cricket</a>
+<a class="w73c243886762442f3b55c204ca2a9498 nav-link" href="uae-cricket.html" >UAE cricket</a>
 </li>
 <li class="dropdown nav-item">
-<a class="b2a4f3550c8da111bc39bd86c805aa645 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="nav-link w73c243886762442f3b55c204ca2a9498 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="cricket-academy.html"  >cricket academy</a><a class="dropdown-item" href="cricket-training.html"  >cricket training</a><a class="dropdown-item" href="cricket-instructors.html"  >cricket instructors</a><a class="dropdown-item" href="cricket-school.html"  >cricket school</a><a class="dropdown-item" href="advanced-coaching.html"  >advanced coaching</a><a class="dropdown-item" href="elite-cricket.html"  >elite cricket</a><a class="dropdown-item" href="cricket-nets.html"  >cricket nets</a><a class="dropdown-item" href="cricket-drills.html"  >cricket drills</a><a class="dropdown-item" href="uae-sports.html"  >UAE sports</a><a class="dropdown-item" href="cricket-skills.html"  >cricket skills</a><a class="dropdown-item" href="cricket-matches.html"  >cricket matches</a><a class="dropdown-item" href="cricket-league.html"  >cricket league</a><a class="dropdown-item" href="cricket-team.html"  >cricket team</a><a class="dropdown-item" href="expert-cricket-training.html"  >expert cricket training</a><a class="dropdown-item" href="cricket-bootcamp.html"  >cricket bootcamp</a><a class="dropdown-item" href="private-coaching.html"  >private coaching</a><a class="dropdown-item" href="cricket-lessons.html"  >cricket lessons</a><a class="dropdown-item" href="cricket-player.html"  >cricket player</a><a class="dropdown-item" href="cricket-programs.html"  >cricket programs</a><a class="dropdown-item" href="cricket-club-uae.html"  >cricket club UAE</a><a class="dropdown-item" href="professional-sports.html"  >professional sports</a><a class="dropdown-item" href="cricket-trainers.html"  >cricket trainers</a><a class="dropdown-item" href="cricket-uae-academy.html"  >cricket UAE academy</a><a class="dropdown-item" href="cricket-pitch.html"  >cricket pitch</a><a class="dropdown-item" href="cricket-uae-training.html"  >cricket UAE training</a><a class="dropdown-item" href="cricket-coaching-uae.html"  >cricket coaching UAE</a><a class="dropdown-item" href="cricket-development.html"  >cricket development</a><a class="dropdown-item" href="high-performance-cricket.html"  >high-performance cricket</a><a class="dropdown-item" href="cricket-mentorship.html"  >cricket mentorship</a><a class="dropdown-item" href="national-cricket-training.html"  >national cricket training</a><a class="dropdown-item" href="cricket-coach-uae.html"  >cricket coach UAE</a><a class="dropdown-item" href="cricket-sessions.html"  >cricket sessions</a><a class="dropdown-item" href="cricket-preparation.html"  >cricket preparation</a><a class="dropdown-item" href="cricket-schedule.html"  >cricket schedule</a><a class="dropdown-item" href="match-ready-training.html"  >match-ready training</a><a class="dropdown-item" href="cricket-technical-drills.html"  >cricket technical drills</a><a class="dropdown-item" href="cricket-strategies.html"  >cricket strategies</a><a class="dropdown-item" href="fitness-for-cricket.html"  >fitness for cricket</a><a class="dropdown-item" href="cricket-sports-coaching.html"  >cricket sports coaching</a><a class="dropdown-item" href="cricket-one-on-one.html"  >cricket one-on-one</a><a class="dropdown-item" href="cricket-instruction-uae.html"  >cricket instruction UAE</a><a class="dropdown-item" href="cricket-pathways.html"  >cricket pathways</a><a class="dropdown-item" href="batting-techniques.html"  >batting techniques</a><a class="dropdown-item" href="bowling-training.html"  >bowling training</a><a class="dropdown-item" href="fielding-practice.html"  >fielding practice</a><a class="dropdown-item" href="cricket-student-uae.html"  >cricket student UAE</a><a class="dropdown-item" href="cricket-opportunities.html"  >cricket opportunities</a><a class="dropdown-item" href="cricket-sports-camp.html"  >cricket sports camp</a><a class="dropdown-item" href="cricket-player-growth.html"  >cricket player growth</a><a class="dropdown-item" href="cricket-performance.html"  >cricket performance</a><a class="dropdown-item" href="professional-nets-uae.html"  >professional nets UAE</a><a class="dropdown-item" href="cricket-uae-facility.html"  >cricket UAE facility</a><a class="dropdown-item" href="cricket-tournament-prep.html"  >cricket tournament prep</a><a class="dropdown-item" href="cricket-school-uae.html"  >cricket school UAE</a><a class="dropdown-item" href="training-academy-uae.html"  >training academy UAE</a><a class="dropdown-item" href="cricket-workshops.html"  >cricket workshops</a><a class="dropdown-item" href="uae-sports-training.html"  >UAE sports training</a><a class="dropdown-item" href="high-level-cricket.html"  >high-level cricket</a><a class="dropdown-item" href="cricket-career-training.html"  >cricket career training</a><a class="dropdown-item" href="cricket-expertise.html"  >cricket expertise</a><a class="dropdown-item" href="sports-mentoring.html"  >sports mentoring</a><a class="dropdown-item" href="cricket-coaching-classes.html"  >cricket coaching classes</a><a class="dropdown-item" href="cricket-for-teens.html"  >cricket for teens</a><a class="dropdown-item" href="cricket-fitness-uae.html"  >cricket fitness UAE</a><a class="dropdown-item" href="cricket-camps-uae.html"  >cricket camps UAE</a><a class="dropdown-item" href="cricket-performance-drills.html"  >cricket performance drills</a><a class="dropdown-item" href="cricket-trial-camps.html"  >cricket trial camps</a><a class="dropdown-item" href="cricket-weekend-training.html"  >cricket weekend training</a><a class="dropdown-item" href="cricket-coaches-uae.html"  >cricket coaches UAE</a><a class="dropdown-item" href="uae-cricket-structure.html"  >UAE cricket structure</a><a class="dropdown-item" href="cricket-specialist-coach.html"  >cricket specialist coach</a><a class="dropdown-item" href="cricket-tactics.html"  >cricket tactics</a><a class="dropdown-item" href="team-cricket-practice.html"  >team cricket practice</a><a class="dropdown-item" href="cricket-pre-match-routine.html"  >cricket pre-match routine</a><a class="dropdown-item" href="cricket-center-uae.html"  >cricket center UAE</a><a class="dropdown-item" href="pro-cricket-academy.html"  >pro cricket academy</a><a class="dropdown-item" href="cricket-for-athletes.html"  >cricket for athletes</a><a class="dropdown-item" href="cricket-training-schedule.html"  >cricket training schedule</a><a class="dropdown-item" href="player-development-cricket.html"  >player development cricket</a><a class="dropdown-item" href="technical-cricket-sessions.html"  >technical cricket sessions</a><a class="dropdown-item" href="advanced-cricket-tips.html"  >advanced cricket tips</a><a class="dropdown-item" href="uae-cricket-discipline.html"  >UAE cricket discipline</a><a class="dropdown-item" href="cricket-agility-training.html"  >cricket agility training</a><a class="dropdown-item" href="cricket-timing-drills.html"  >cricket timing drills</a><a class="dropdown-item" href="cricket-for-professionals.html"  >cricket for professionals</a><a class="dropdown-item" href="cricket-academy-coach.html"  >cricket academy coach</a><a class="dropdown-item" href="uae-cricket-support.html"  >UAE cricket support</a><a class="dropdown-item" href="sports-talent-uae.html"  >sports talent UAE</a><a class="dropdown-item" href="cricket-training-zone.html"  >cricket training zone</a><a class="dropdown-item" href="cricket-progression.html"  >cricket progression</a><a class="dropdown-item" href="structured-cricket-coaching.html"  >structured cricket coaching</a><a class="dropdown-item" href="pro-cricket-camps.html"  >pro cricket camps</a><a class="dropdown-item" href="cricket-training-program.html"  >cricket training program</a><a class="dropdown-item" href="elite-cricket-uae.html"  >elite cricket UAE</a><a class="dropdown-item" href="cricket-mentoring-uae.html"  >cricket mentoring UAE</a><a class="dropdown-item" href="training-for-cricket-players.html"  >training for cricket players</a><a class="dropdown-item" href="cricket-coaching-professionals.html"  >cricket coaching professionals</a></div>
 </li>
-<li class="nav-item"><a class="nav-link b2a4f3550c8da111bc39bd86c805aa645" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="w73c243886762442f3b55c204ca2a9498 nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -863,7 +863,7 @@ This page provides information on an international badminton tournament held in 
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 e47bf08e11fe23ad46dae19a707ba67cc">
+<div class="col-md-12 mb-3 dacdc6171c0c6201ed7db9b62f0cccdb2">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4></h4></a>
@@ -887,10 +887,10 @@ This page provides information on an international badminton tournament held in 
 </div>
 </div>
 <footer>
-<div class="py-4 container pt-5" >
-<div class="row"><div class="col-lg-3"><p><a class="b2a4f3550c8da111bc39bd86c805aa645" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="b2a4f3550c8da111bc39bd86c805aa645" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="b2a4f3550c8da111bc39bd86c805aa645" href="about-us.html" rel="nofollow">About Us</a></p>
+<div class="container py-4 pt-5" >
+<div class="row"><div class="col-lg-3"><p><a class="w73c243886762442f3b55c204ca2a9498" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="w73c243886762442f3b55c204ca2a9498" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="w73c243886762442f3b55c204ca2a9498" href="about-us.html" rel="nofollow">About Us</a></p>
 </p>
 </div></div>
 </div>
